tests/sema/bad/24_missing_return.sg
fn bad(a:int) -> int {
  if (a > 0) {
    return 1;
  }
  let x:int = 2;
}
